--- a/style.css
+++ b/style.css
@@ -1,1 +1,138 @@
+body {
+    background-color: rgb(207, 205, 205);
+}
 
+#conteudo {
+    background-color: gray;
+    width: 70%;
+    height: 70%;
+    margin-left: 15%;
+    height: 110em;
+    border-radius: 20px;
+}
+
+main{
+    background-color: white;
+    margin-left: 50px;
+    margin-right: 50px;
+    height: 95em;
+    
+}
+
+footer {
+    position: relative;
+    background-color: red;
+    width: 100%;
+    height: 11%;
+    bottom: 815px;
+    margin-left: 300px;
+    border-radius: 5px;
+    
+    
+    
+}
+
+#footer {
+    color: white;
+    font-family: 'Arial';
+   
+    
+
+    
+}
+
+p {
+    font-family: 'poppins';
+    padding-left: 30px;
+    font-size: 16px;
+    font-weight: bolder;
+}
+
+h1 {
+    padding: 20px 0 10px 80px;
+    font-family:'Arial';
+    font-style: bold;
+    color: red;
+    font-size: 45px;
+    text-shadow: black 1px 3px 3px;
+}
+
+
+h2 {
+    font-family: "Arial";
+    color: red;
+    padding-left: 50px;
+    position: relative;
+    left: 60%;
+    text-align: center;
+}
+
+h3 {
+    font-family: "Arial";
+    color: red;
+    padding-left: 0px;
+    text-align: center;
+   
+}
+
+#texto1 {
+    font-family: 'poppins';
+    position: relative;
+    padding-left: 30px;
+}
+
+
+#catalogo {
+    background-color: red;
+    text-align: center;
+    height: 54px;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-bottom: 20px;
+}
+
+
+#catalogo a {
+    display: inline-block;
+    padding: 13px 50px;
+    color: white;
+    font-size: 23px;
+    font-weight: bolder;
+    font-family: 'Arial';
+    text-decoration: none;
+}
+
+#catalogo a:hover {
+    border-radius: 20px;
+    background-color: black;
+    color: red;
+    transition: all 0.5s;
+}
+
+
+#textos {
+    display: inline-block;
+    width: 500px;
+
+}
+
+
+#imagem1 {
+    position: relative;
+    width: 450px;
+    height: 400px;
+    border: 10px solid black;
+    bottom: 550px;
+    left: 700px;
+
+}
+
+#imagem2 {
+    position: relative;
+    width: 450px;
+    height: 400px;
+    border: 10px solid black;
+    bottom: 1550px;
+    left: 700px;
+    
+}
